corrections for services integration.

--- a/cst438_register/src/main/resources/application.properties
+++ b/cst438_register/src/main/resources/application.properties
@@ -1,19 +1,16 @@
 server.port = 8080
 
 gradebook.url = http://localhost:8081
-
-gradebook.service = MQ
+gradebook.service = default
 
 # database properties
-spring.datasource.url=jdbc:mysql://localhost:3306/person
+spring.datasource.url=jdbc:mysql://localhost:3306/<DB NAME>
 spring.datasource.username=root
-spring.datasource.password=dw4$Database
+spring.datasource.password=<PASSWORD>
 spring.jpa.hibernate.ddl-auto=update
 
-# google authentication provider
-spring.security.oauth2.client.registration.google.client-id = 224200847588-im6460l0r4qhpt7ctqmb7q9t362mgj1l.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret = K17-t_ua2IqpPtuC04KKe2qg
-
 server.servlet.session.persistent=false
+
+debug = true
  
 # logging.level.org.springframework.security = TRACE
