--- a/cst438_register/src/main/resources/application.properties
+++ b/cst438_register/src/main/resources/application.properties
@@ -1,16 +1,15 @@
 server.port = 8080
+server.servlet.session.persistent=false
 
+# gradebook service
 gradebook.url = http://localhost:8081
 gradebook.service = default
 
 # database properties
-spring.datasource.url=jdbc:mysql://localhost:3306/<DB NAME>
-spring.datasource.username=root
-spring.datasource.password=<PASSWORD>
-spring.jpa.hibernate.ddl-auto=update
-
-server.servlet.session.persistent=false
+spring.datasource.url = jdbc:mysql://localhost:3306/< DB NAME >
+spring.datasource.username = root
+spring.datasource.password = < PASSWORD >
+spring.jpa.hibernate.ddl-auto = update
 
 debug = true
- 
 # logging.level.org.springframework.security = TRACE
