--- a/cst438_register/src/main/resources/application.properties
+++ b/cst438_register/src/main/resources/application.properties
@@ -11,5 +11,5 @@ spring.datasource.username = root
 spring.datasource.password = < PASSWORD >
 spring.jpa.hibernate.ddl-auto = update
 
-debug = true
+# debug = true
 # logging.level.org.springframework.security = TRACE
