fixes for *  query @Parm, *  toString methods in DTO classes.

--- a/cst438_register/src/main/resources/application.properties
+++ b/cst438_register/src/main/resources/application.properties
@@ -4,6 +4,9 @@ server.servlet.session.persistent=false
 # gradebook service
 gradebook.url = http://localhost:8081
 gradebook.service = default
+# registration service
+registration.url = http://localhost:8080
+registration.service = default
 
 # database properties
 spring.datasource.url = jdbc:mysql://localhost:3306/< DB NAME >
