--- a/cst438_register/src/main/resources/application.properties
+++ b/cst438_register/src/main/resources/application.properties
@@ -9,10 +9,11 @@ registration.url = http://localhost:8080
 registration.service = default
 
 # database properties
-spring.datasource.url = jdbc:mysql://localhost:3306/< DB NAME >
+spring.datasource.url = jdbc:mysql://localhost:3306/register
 spring.datasource.username = root
-spring.datasource.password = < PASSWORD >
+spring.datasource.password = <your password>
 spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql = true
 
 # debug = true
 # logging.level.org.springframework.security = TRACE
